WP-8557 Fixes for the main menu spacing on responsive for both phone and tablet.

--- a/css/style.css
+++ b/css/style.css
@@ -8336,6 +8336,11 @@ input.signup-submit:hover {
   }
 }
 
+.md-mobile-style2.awemenu-mobile-standard .awemenu .awemenu-submenu .awemenu-item {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 @media (min-width: 37.5em) and (max-width: 74.9375em) {
   #md-megamenu-2.md-megamenu-seed-main-menu.awemenu-mobile,
   #md-megamenu-3.md-megamenu-executive-edu-main-menu.awemenu-mobile {
@@ -8395,6 +8400,11 @@ input.signup-submit:hover {
 .md-megamenu-executive-edu-main-menu.awemenu-mobile .link-secondary,
 .md-megamenu-executive-edu-main-menu.awemenu-mobile #block-menu-menu-md-megamenu-programs-utilit {
   display: none;
+}
+#md-megamenu-1.awemenu-mobile-standard .awemenu-megamenu-wrapper .row div[class^="col-md"],
+.md-megamenu-seed-main-menu.awemenu-mobile .awemenu-megamenu-wrapper .row div[class^="col-md"],
+.md-megamenu-executive-edu-main-menu.awemenu-mobile .awemenu-megamenu-wrapper .row div[class^="col-md"] {
+  width: 100%;
 }
 
 .md-megamenu-seed-main-menu.awemenu-mobile span.amm-bar,
@@ -8599,9 +8609,10 @@ input.signup-submit:hover {
 #md-megamenu-1 .awemenu-active a span {
   display: inline-block;
 }
-@media (min-width: 62.4375em) {
+@media (min-width: 75em) {
   #md-megamenu-1 .awemenu-active a span {
-    border-bottom: 4px solid #990000;
+    border-bottom: 6px solid #990000;
+    padding-bottom: 20px;
   }
 }
 #md-megamenu-1 .awemenu-active .awemenu-submenu:after {
@@ -8679,13 +8690,23 @@ input.signup-submit:hover {
 }
 #md-megamenu-1 .awemenu .awemenu-megamenu-wrapper .row {
   margin: 0 auto;
-  width: 1170px;
+}
+@media (min-width: 75em) {
+  #md-megamenu-1 .awemenu .awemenu-megamenu-wrapper .row {
+    padding-left: 40px;
+    width: 1170px;
+  }
 }
 #md-megamenu-1 .awemenu .awemenu-megamenu-wrapper .row .menu li {
   font-family: "NewsGothicBT-Light", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
   margin-bottom: 0;
   padding-left: 0;
+}
+@media (min-width: 37.5em) and (max-width: 74.9375em) {
+  #md-megamenu-1 .awemenu .awemenu-megamenu-wrapper .row .menu li {
+    padding-left: 15px;
+  }
 }
 @media (max-width: 37.4375em) {
   #md-megamenu-1 .awemenu .awemenu-megamenu-wrapper .row .menu li {
@@ -8937,7 +8958,8 @@ input.signup-submit:hover {
   right: unset;
   margin-left: unset;
   margin-right: unset;
-  padding-left: 0;
+  padding: 0;
+  width: unset;
 }
 #md-megamenu-1.awemenu-mobile-standard .awemenu .awemenu-megamenu-wrapper:after,
 .md-megamenu-seed-main-menu.awemenu-mobile.awemenu-mobile-standard .awemenu .awemenu-megamenu-wrapper:after,
@@ -13446,6 +13468,11 @@ div.callout br {
   }
 }
 
+.md-mobile-style2.awemenu-mobile-standard .awemenu .awemenu-submenu .awemenu-item {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 @media (min-width: 37.5em) and (max-width: 74.9375em) {
   #md-megamenu-2.md-megamenu-seed-main-menu.awemenu-mobile,
   #md-megamenu-3.md-megamenu-executive-edu-main-menu.awemenu-mobile {
@@ -13506,6 +13533,11 @@ div.callout br {
 .md-megamenu-executive-edu-main-menu.awemenu-mobile #block-menu-menu-md-megamenu-programs-utilit {
   display: none;
 }
+#md-megamenu-1.awemenu-mobile-standard .awemenu-megamenu-wrapper .row div[class^="col-md"],
+.md-megamenu-seed-main-menu.awemenu-mobile .awemenu-megamenu-wrapper .row div[class^="col-md"],
+.md-megamenu-executive-edu-main-menu.awemenu-mobile .awemenu-megamenu-wrapper .row div[class^="col-md"] {
+  width: 100%;
+}
 
 .md-megamenu-seed-main-menu.awemenu-mobile span.amm-bar,
 .md-megamenu-executive-edu-main-menu.awemenu-mobile span.amm-bar {
@@ -13564,7 +13596,8 @@ div.callout br {
   }
 }
 @media (min-width: 14.375em) and (max-width: 74.9375em) {
-  #navigation.search-open .section a#search-touch-button, #navigation.search-open .section div#search-close {
+  #navigation.search-open .section a#search-touch-button,
+  #navigation.search-open .section div#search-close {
     display: none;
   }
   #navigation.search-open #md-megamenu-1.awemenu-mobile-standard.md-mobile-style2 .awemenu-bars {
@@ -13708,9 +13741,10 @@ div.callout br {
 #md-megamenu-1 .awemenu-active a span {
   display: inline-block;
 }
-@media (min-width: 62.4375em) {
+@media (min-width: 75em) {
   #md-megamenu-1 .awemenu-active a span {
-    border-bottom: 4px solid #990000;
+    border-bottom: 6px solid #990000;
+    padding-bottom: 20px;
   }
 }
 #md-megamenu-1 .awemenu-active .awemenu-submenu:after {
@@ -13788,13 +13822,23 @@ div.callout br {
 }
 #md-megamenu-1 .awemenu .awemenu-megamenu-wrapper .row {
   margin: 0 auto;
-  width: 1170px;
+}
+@media (min-width: 75em) {
+  #md-megamenu-1 .awemenu .awemenu-megamenu-wrapper .row {
+    padding-left: 40px;
+    width: 1170px;
+  }
 }
 #md-megamenu-1 .awemenu .awemenu-megamenu-wrapper .row .menu li {
   font-family: "NewsGothicBT-Light", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
   margin-bottom: 0;
   padding-left: 0;
+}
+@media (min-width: 37.5em) and (max-width: 74.9375em) {
+  #md-megamenu-1 .awemenu .awemenu-megamenu-wrapper .row .menu li {
+    padding-left: 15px;
+  }
 }
 @media (max-width: 37.4375em) {
   #md-megamenu-1 .awemenu .awemenu-megamenu-wrapper .row .menu li {
@@ -14046,7 +14090,8 @@ div.callout br {
   right: unset;
   margin-left: unset;
   margin-right: unset;
-  padding-left: 0;
+  padding: 0;
+  width: unset;
 }
 #md-megamenu-1.awemenu-mobile-standard .awemenu .awemenu-megamenu-wrapper:after,
 .md-megamenu-seed-main-menu.awemenu-mobile.awemenu-mobile-standard .awemenu .awemenu-megamenu-wrapper:after,
